@@ -77,3 +77,7 @@ end
 Then(/^multiple select list should have no selected options$/) do
   expect(@page.select_list_multiple_element.selected_options).to be_empty
 end
+
+When(/^I select an option using the value "([^"]*)"$/) do |value|
+  @page.select_list_id_element.select_value(value)
+end
